--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^7.3.7",
     "@react-navigation/native": "^7.1.4",
+    "@react-navigation/stack": "^7.2.8",
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.2",
